07/30/2010 - MythBox RC2
=============================
 - new     : Issue 97 - Myth TV hostname and port are now queried directly from the database. Changed to read-only on the Settings->MythTV screen
 - fixed   : Issue 98 - IP addresses are used throughout the codebase. No more host not found errors.
 - fixed   : Issue 107 - Database connections are now closed when idle and reconnect on demand.
 - new     : Issue 106 - More responsive fanart lookup based on current list selection
 - fixed   : Issue 108 - Focus changes to Play+Skip button in Recording Details screen after user has already switched focus to another button
 - new     : Issue 109 - Enable navigation from the Settings screen to the XBMC settings screen
 - new     : Issue 114 - Hostname added to comm flag status (slave backends only)
 - fixed   : Issue 117 - TV Guide - Clicking on currently playing program launches Create Schedule window instead of starting Live TV 
 - new     : Issue 118 - MythTV 0.23-1 compatibility (Protocol 57)
 - fixed   : Minor issues here and there
 - new     : Runs under the forthcoming version of XBMC - Dharma
 - new     : Cache ffmpeg output used for framerate extraction (comm flagging)
 - new     : Added 'Enable Aggressive Caching' to Settings->MythTV to pre-cache framerate and commercial break info
  
06/08/2010 - MythBox RC1
=============================
 - new     : MythTV 0.23 support added - Protocol version 56 
 - new     : PageUp/PageDn (Channel Up/Channel Down on the remote) in the Recording Details screen now navigates
             to the next or previous recording
 - new     : Automatic forwarding through a commercial break when you land in the middle of the commercial break
 - new     : Added selected position and total number of items to the Recordings, Schedules, and Upcoming Recordings screens
 - new     : Selecting a recording in the Upcoming Recordings screen launches the Recording Schedule editor