@@ -109,32 +109,34 @@ class MythSettings(object):
                 
     def initDefaults(self):
         self.defaults = {
-            'mysql_host'              : 'localhost',
-            'mysql_port'              : '3306',
-            'mysql_database'          : 'mythconverg',
-            'mysql_user'              : 'mythtv',
-            'mysql_password'          : 'change_me',
-            'mysql_encoding_override' : 'latin1',
-            'paths_recordedprefix'    : self.platform.getDefaultRecordingsDir(),
-            'paths_ffmpeg'            : self.platform.getFFMpegPath(),
-            'aggressive_caching'      : 'False',
-            'recorded_view_by'        : '2', 
-            'upcoming_view_by'        : '2',
-            'confirm_on_delete'       : 'True',
-            'fanart_tvdb'             : 'True',
-            'fanart_tmdb'             : 'True',
-            'fanart_imdb'             : 'True',
-            'fanart_google'           : 'True',
-            'feeds_twitter'           : 'mythboxfeed',
-            'lirc_hack'               : 'False',
-            'logging_enabled'         : 'False',
-            'schedules_last_selected' : '0',
-            'livetv_last_selected'    : '0',
-            'recordings_last_selected': '0',
-            'recordings_sort_by'      : 'Date',
-            'recordings_sort_ascending':'False',
-            'recordings_recording_group':'Default',
-            'tv_guide_last_selected'  : '0'
+            'mysql_host'                : 'localhost',
+            'mysql_port'                : '3306',
+            'mysql_database'            : 'mythconverg',
+            'mysql_user'                : 'mythtv',
+            'mysql_password'            : 'change_me',
+            'mysql_encoding_override'   : 'latin1',
+            'paths_recordedprefix'      : self.platform.getDefaultRecordingsDir(),
+            'paths_ffmpeg'              : self.platform.getFFMpegPath(),
+            'aggressive_caching'        : 'False',
+            'recorded_view_by'          : '2', 
+            'upcoming_view_by'          : '2',
+            'confirm_on_delete'         : 'True',
+            'fanart_tvdb'               : 'True',
+            'fanart_tmdb'               : 'True',
+            'fanart_imdb'               : 'True',
+            'fanart_google'             : 'True',
+            'feeds_twitter'             : 'mythboxfeed',
+            'lirc_hack'                 : 'False',
+            'logging_enabled'           : 'False',
+            'schedules_last_selected'   : '0',
+            'livetv_last_selected'      : '0',
+            'recordings_last_selected'  : '0',
+            'recordings_sort_by'        : 'Date',
+            'recordings_sort_ascending' : 'False',
+            'recordings_recording_group': 'Default',
+            'tv_guide_last_selected'    : '0',
+            'upcoming_sort_by'          : 'Date',
+            'upcoming_sort_ascending'   : 'False',
         }
 
     def load(self):
